# AudioDataSet2

./: .gitmodules  README.md  pyproject.toml  requirements.text
.devcontainer/: Dockerfile  devcontainer.json
AudioDataSet/: eval.py  record_audio.py  test.py  train.py
AudioDataSet/configs/: __init__.py  record_config.py  record_config.yaml
AudioDataSet/recorder/: base_recordermodule.py  data_labeler.py  recorder_hardware.py
AudioDataSet/utils/: logger.py
configs/data/: mnist.yaml
configs/experiment/audiorecord/: class1.yaml
configs/model/: mnist.yaml
outputs/2024-11-28/14-46-38/.hydra/: config.yaml  hydra.yaml  overrides.yaml
