[tool.poetry]
name = "AudioDataSet"
version = "0.1.1"
description = "AudioDataSet: A data pipeline for audio Localization and Classification"
authors = ["Paria Vali Zadeh <pvz@informatik.uni-kiel.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
triton = "^3.1.0"
scipy = "^1.11.3"
ffprobe = "^0.5"
# --------- pytorch --------- #
torch = {version = "=2.5.1+cu118", source = "pytorch_gpu"}
torchvision = {version = "=0.20.1+cu118", source = "pytorch_gpu"}
torchaudio = {version = "=2.5.1+cu118", source = "pytorch_gpu"}
lightning = "^2.2.2"
torchmetrics= "^0.11"

# --------- tensorflow --------- #
tensorflow = {version = "2.18", extras = ["and-cuda"]}
tensorflow-hub = "^0.16.1"
tensorboard = "^2.14.1"


# --------- hydra --------- #
hydra-core = "^1.3"
hydra-colorlog = "^1.2"
hydra-optuna-sweeper = "^1.2"

# --------- loggers --------- #
# wandb
# neptune-client
# mlflow
# comet-ml
# aim>=3.16.2  # no lower than 3.16.2, see https://github.com/aimhubio/aim/issues/2550

# --------- others --------- #
# rootutils       # standardizing the project root setup
# pre-commit      # hooks for applying linters on commit
# rich            # beautiful text formatting in terminal
# pytest          # tests
# sh            # for running bash commands in some tests (linux/macos only)
rootutils = "^1.0.7"
pre-commit = "^3.5.0"
rich = "^13.6.0"
pytest = "^7.4.2"
sh = "^2.0.6"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
ipywidgets = "^8.1.1"
jupyter = "^1.0.0"
datasets = "^2.14.6"
audiomentations = "^0.33.0"
torch-audiomentations = "^0.11.0"
wandb = "^0.16.0"
transformers = "^4.38.0"
pyrootutils = "^1.0.4"
mlflow = "^2.11.0"
pydub = "^0.25.1"
tabulate = "^0.9.0"
timm = "0.4.5"
einops = "^0.8.0"
tensorrt =  "^10.6.0"
numba = "0.60.0"
numpy = "^1.26.4"
sounddevice = "^0.5.1"
PyAudio = "^0.2.14"
wave = "^0.0.2"






[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
plumbum = "^1.8.2"
jsonlines = "^4.0.0"
kaggle = "^1.6.11"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


